--- a/src/Pages/Write.css
+++ b/src/Pages/Write.css
@@ -32,9 +32,9 @@
 }
 
 .upload-btn {
-    font-size: 1rem;
-    color: white;
-    background-color: #2e8d32;
+    font-size: 1.25rem;
+    color: #333333;
+    background-color: #FF6F61;
     cursor: pointer;
     border: none;
     border-radius: 5px;
@@ -43,9 +43,6 @@
     border-radius: 8px;
 }
 
-.upload-btn:hover {
-    background-color: #0fee17;
-}
 
 .upload-button {
     position: relative;
@@ -63,16 +60,12 @@
 .dropdown-option {
     padding:10px 15px;
     cursor: pointer;
-    background-color: rgb(166, 32, 32);
+    background-color: #FAD0C4;
     margin-top: 5px;
     margin-bottom: 10px;
     border: none;
     border-radius: 15px;
-    transition: background-color 0.5s;
-}
-
-.dropdown-option:hover {
-    background-color: red;
+    font-size: 1.15rem;
 }
 
 .media-preview {
@@ -91,10 +84,10 @@
     top: 100px;
     right: 50px;
     padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #FF6F61;
+    color: #333333;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    font-size: 1rem;
+    font-size: 1.25rem;
 }
