--- a/src/Pages/Write.css
+++ b/src/Pages/Write.css
@@ -115,8 +115,8 @@
     }
   
     .media-preview {
-      width: 35%;
-      height: auto;
+      width: 110px;
+      height: 110px;
       margin-top: 0;
     }
   
